Bug 1620575 - Ensure that sizeToContent ceils when converting to dev pixels. r=dholbert

If we get a sub-pixel content size, rounding down may actually cause the content
to wrap, which is not desirable and would cause the content to be truncated.

Differential Revision: https://phabricator.services.mozilla.com/D69744

--HG--
extra : moz-landing-system : lando